sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
	swap:Boolean=true
	while(swap){
		swap=false
		for(i<-0 to 8){
			if(plusPetit(i+1,i)){
				echange(i,i+1)
				swap=true
			}
		}
	}
}
